--- a/settings.json
+++ b/settings.json
@@ -7,6 +7,12 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "base_keymap": "None",
+  "relative_line_numbers": true,
+  "tab_size": 2,
+  "vim_mode": true,
+  "vertical_scroll_margin": 8,
+
   "tab_bar": {
     "show": true
   },
@@ -15,19 +21,14 @@
     "dark": "Andromeda",
     "light": "Gruvbox Light Hard"
   },
-
-  "vertical_scroll_margin": 8,
-  "relative_line_numbers": true,
-  "vim_mode": true,
-  "tab_size": 2,
-
-  //"base_keymap": "None",
-
-  "scrollbar": { "show": "never" },
-
+  "scrollbar": {
+    "show": "never"
+  },
   "project_panel": {
     "default_width": 300,
-    "scrollbar": { "show": "never" }
+    "scrollbar": {
+      "show": "never"
+    }
   },
   "outline_panel": {
     "default_width": 300
