--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,12 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "features": {
+    "inline_completion_provider": "supermaven"
+  },
   "assistant": {
     "button": false,
-    "default_width": 600,
+    "default_width": 640,
     "version": "2",
     "default_open_ai_model": null,
     "default_model": {
@@ -26,6 +29,7 @@
   "relative_line_numbers": true,
   "tab_size": 2,
   "vim_mode": true,
+  "show_completions_on_input": false,
   "vim": {
     "use_smartcase_find": true,
     "use_system_clipboard": "always"
@@ -40,8 +44,8 @@
   },
   "theme": {
     "mode": "system",
-    "dark": "Andromeda",
-    "light": "Atelier Sulphurpool Light"
+    "dark": "Ayu Mirage",
+    "light": "Gruvbox Light"
   },
   "autosave": "on_window_change",
   "scrollbar": {
