--- a/settings.json
+++ b/settings.json
@@ -29,7 +29,7 @@
   "relative_line_numbers": true,
   "tab_size": 2,
   "vim_mode": true,
-  "show_completions_on_input": false,
+  // "show_completions_on_input": false,
   "vim": {
     "use_smartcase_find": true,
     "use_system_clipboard": "always"
@@ -37,14 +37,14 @@
 
   "vertical_scroll_margin": 8,
   "cursor_blink": false,
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "ui_font_size": 14,
+  "buffer_font_size": 14,
   "tab_bar": {
     "show": true
   },
   "theme": {
     "mode": "system",
-    "dark": "Ayu Mirage",
+    "dark": "One Dark",
     "light": "Gruvbox Light"
   },
   "autosave": "on_window_change",
