--- a/settings.json
+++ b/settings.json
@@ -16,8 +16,8 @@
     "version": "2",
     "default_open_ai_model": null,
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "provider": "openai",
+      "model": "gpt-4o"
     }
   },
   "language_models": {
@@ -43,7 +43,7 @@
   },
   "theme": {
     "mode": "system",
-    "dark": "One Dark",
+    "dark": "Ayu Mirage",
     "light": "Gruvbox Light"
   },
   "autosave": "on_window_change",
@@ -70,7 +70,7 @@
   "soft_wrap": "editor_width",
   "languages": {
     "JSON": {
-      // "format_on_save": "off"
+      "format_on_save": "off"
     }
   }
 }
